--- a/src/Stylesheets/style.scss
+++ b/src/Stylesheets/style.scss
@@ -15,11 +15,11 @@ html {
 //===============================APP================================//
 //  Mainly to set the background only, and make it to cover entire screen
 .App {
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 
     background-color: black;
-    background-image: url('https://i.pinimg.com/originals/ce/7a/1a/ce7a1a5a6639b3430774c83c5910e537.jpg');
+    background-image: url('../images/background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
